--- a/testfiles/websocket.html
+++ b/testfiles/websocket.html
@@ -9,6 +9,6 @@
 	<body>
 		<textarea id="input">juruoyun</textarea>
 		<button id="button" disabled="disabled" onclick="jwb.websocket.send(document.getElementById('input').value)">发送</button>
-		<div id="output"></div>
+		<div id="output" style="width:100%"></div>
 	</body>
 </html>
